--- a/template/home.pug
+++ b/template/home.pug
@@ -11,7 +11,7 @@ block content
             .container
                 .header-logo
                     a(href='/')
-                        img(src='/public/images/logo.png', alt='logo')
+                        img(src='/public/images/home/mars-logo.png', alt='logo')
                 .top-nav
                     span.menu  
                     ul.nav1
@@ -47,18 +47,17 @@ block content
                 | "火星人"——人是互联，社交的最基本元素，作为一家以人为本的互联网企业，团队是公司的核心竞争力，我们始终坚持用最前沿的技术助力企业转型互联网+，实现全球化，数据化和智能化
     .about-bottom
         .col-md-6.about-bottom-left
-            h4 我们是最棒的
+            h4 火星云和火星人
             p.top
-                | 人生，总有许多沟坎需要跨越
-                | 生命，总有许多迷茫需要领悟
+            
             p
-                | 生活的苦与乐总在更迭，没有谁的命运是完美的，残缺才是一种大美。快乐是精华，能让我们信心十足，痛苦是良药，能让我们顽强支撑。别为难自己，别苛求自己，拓宽自己的心，让它包容伤害和痛苦。心宽了，烦恼自然就少了，日子自然就顺了，人生自然就自在了。一首歌可以撩起一段记忆，一杯茶可以味染一份心情，当我们读懂了时光，才知道自己需要的是什么。一曲淡歌，几缕相思，挽留住一袭阳光，柔软了梦的声音。多少年，总是一个人静静地感受着生命，车水马龙的尘世间，人来人往的热闹、灯红酒绿的繁华，仿佛都与我无关。裹紧自己的衣衫，埋着只属于自己的心绪，看着自己脚尖，一步一步像游走的灵魂，前方是哪里？
+                | 南宁火星人信息科技有限公司由留学人员杜聪回国创办，是一家致力于电子商务系统研发及提供相关配套增值服务的企业，公司在英国伦敦设有分部。公司将凭借总经理多年在英国为多家电子商务和网络媒体公司提供咨询服务的经验，能够为正在从事或即将设计电子商务的企业提供配套的增值性的咨询服务，其中包括电子商务整合方案策划，B2B,B2C整体解决方案，移动APP解决方案，网络媒体市场营销，网络品牌及形象推广，网络用户调研，数据采集和经济模型分析，项目预算与评估，财务分析和融资方案等。
             .read-more
                 a(href='#')
                     | 读取更多
                     span
         .col-md-6.about-bottom-right
-            img(src='/public/images/img1.jpg', alt='')
+            img(src='/public/images/home/img1.jpg', alt='')
         .clearfix  
     .service
         .container
@@ -69,17 +68,17 @@ block content
                 | feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
             .service-grids
                 .col-md-4
-                    img(src='/public/images/icon1.png', alt='')
+                    img(src='/public/images/home/icon1.png', alt='')
                     h5 咨询
                     p
                         | Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare quam
                 .col-md-4
-                    img(src='/public/images/icon2.png', alt='')
+                    img(src='/public/images/home/icon2.png', alt='')
                     h5 旅游行程
                     p
                         | Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare quam
                 .col-md-4
-                    img(src='/public/images/icon3.png', alt='')
+                    img(src='/public/images/home/icon3.png', alt='')
                     h5 安全研究
                     p
                         | Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare quam
@@ -116,25 +115,25 @@ block content
     .project-gallery
         .gallery-grids
             .gallery-grids-info
-                img(src='/public/images/img3.jpg', alt='')
+                img(src='/public/images/home/img3.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
                     p BRANDING
             .gallery-grids-info
-                img(src='/public/images/img4.jpg', alt='')
+                img(src='/public/images/home/img4.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
                     p BRANDING
             .gallery-grids-info
-                img(src='/public/images/img5.jpg', alt='')
+                img(src='/public/images/home/img5.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
                     p BRANDING
             .gallery-grids-info
-                img(src='/public/images/img6.jpg', alt='')
+                img(src='/public/images/home/img6.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
@@ -147,25 +146,25 @@ block content
                 a(href='#') buff.ly/NC8gog
         .gallery-grids
             .gallery-grids-info
-                img(src='/public/images/img3.jpg', alt='')
+                img(src='/public/images/home/img3.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
                     p BRANDING
             .gallery-grids-info
-                img(src='/public/images/img4.jpg', alt='')
+                img(src='/public/images/home/img4.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
                     p BRANDING
             .gallery-grids-info
-                img(src='/public/images/img5.jpg', alt='')
+                img(src='/public/images/home/img5.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
                     p BRANDING
             .gallery-grids-info
-                img(src='/public/images/img6.jpg', alt='')
+                img(src='/public/images/home/img6.jpg', alt='')
                 .caption
                     h4 PAPERCLIPS
                     span
@@ -186,7 +185,7 @@ block content
                     | 最优秀的团队，给您带来最优秀的服务
             .team-grids
                 .col-md-4.col-xs-12.team-grids-info
-                    img(src='/public/images/img7.jpg', alt='')
+                    img(src='/public/images/home/img7.jpg', alt='')
                     .team-grids-text
                         h3 米切尔·安德森
                         h5 创意总监
@@ -199,7 +198,7 @@ block content
                             li
                                 a.in(href='#')
                 .col-md-4.col-xs-12.team-grids-info
-                    img(src='/public/images/img13.jpg', alt='')
+                    img(src='/public/images/home/img13.jpg', alt='')
                     .team-grids-text
                         h3 米切尔·安德森
                         h5 创意总监
@@ -212,7 +211,7 @@ block content
                             li
                                 a.in(href='#')
                 .col-md-4.col-xs-12.team-grids-info
-                    img(src='/public/images/img7.jpg', alt='')
+                    img(src='/public/images/home/img7.jpg', alt='')
                     .team-grids-text
                         h3 米切尔·安德森
                         h5 创意总监
@@ -264,11 +263,11 @@ block content
                     #top.callbacks_container
                         ul#slider4.rslides
                             li
-                                img(src='/public/images/img8.jpg', alt='')
+                                img(src='/public/images/home/img8.jpg', alt='')
                             li
-                                img(src='/public/images/img9.jpg', alt='')
+                                img(src='/public/images/home/img9.jpg', alt='')
                             li
-                                img(src='/public/images/img10.jpg', alt='')
+                                img(src='/public/images/home/img10.jpg', alt='')
                 .blog-grids-right
                     span 10 April 2014
                     h4
@@ -290,7 +289,7 @@ block content
                         a.bracket(href='#') [...]
                 .blog-grids-right.rt-img
                     a(href='#')
-                        img(src='/public/images/img11.jpg', alt='')
+                        img(src='/public/images/home/img11.jpg', alt='')
                 .clearfix  
                 .caption-imag
                     .round-shape
@@ -298,7 +297,7 @@ block content
             .blog-grids
                 .blog-grids-left
                     a(href='#')
-                        img(src='/public/images/img12.jpg', alt='')
+                        img(src='/public/images/home/img12.jpg', alt='')
                 .blog-grids-right
                     span 10 January 2014
                     h4
@@ -327,7 +326,7 @@ block content
             .footer-grids
                 .col-md-3.footer-logo
                     a(href='/')
-                        img(src='/public/images/logo.png', alt='logo')
+                        img(src='/public/images/home/mars-logo.png', alt='logo')
                     p
                         | 我们采用了独有的技术开发方式，最求最低成本下质量最高细节完美。与运营结合的技术思维和丰富的案例实践经验为企业提供最专业最可靠技术平台服务。
                     p.logo-text
@@ -362,27 +361,23 @@ block content
                         p 皮特
                 .col-md-3.address
                     h4 我们的地址
-                    p
-                        | Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus,
-                        | luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta
                     ul
                         li
                             span
-                            | Moonshine St. 14/05 Light, Jupiter
+                            | 广西南宁市科园大道东五路4号南宁软件园1楼
                         li
                             span.ph-no
-                            | +00 (123) 456 78 90
+                            | 0771-3216270
                         li
                             span.mail
-                            a(href='mailto:example@email.com') mail@example.com
+                            a(href='mailto:info@mars-it.net') info@mars-it.net
                 .clearfix  
 
     .footer-bottom
         p
-            | Copyright © 2015.Company name All rights reserved.
-            a(target='_blank', href='http://www.cssmoban.com/') 网页模板
-            |  - Collect from 
-            a(href='http://www.cssmoban.com/') 企业网站模板
+            | © 2018 火星云 Designed By Mars-IT All Rights Reserved
+            |  - 桂ICP备15003644号-2
+            
 
     script(type='text/javascript').
         
